--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">My Application</string>
     <string name="welcome">欢迎使用</string>
     <string name="user">用户</string>
-    <string name="user_label">请输入手机号</string>
+    <string name="phone">请输入手机号</string>
     <string name="password">密码</string>
     <string name="password_label">请输入密码</string>
-    <string name="denglu">登陆</string>
-    <string name="zhuce">注册</string>
+    <string name="login">登陆</string>
+    <string name="register">注册</string>
     <string name="passw1">确认密码</string>
     <string name="esc">返回</string>
     <string name="title">首页</string>
@@ -16,4 +16,21 @@
     <string name="resident_login">住户登录</string>
     <string name="_1">天天学习丨中南海月刊（2024.02）</string>
     <string name="todo">TODO</string>
+    <string name="we">欢迎</string>
+    <string name="yzm">手机验证码登录</string>
+    <string name="yz">验证码</string>
+    <string name="yz1">请输入验证码</string>
+    <string name="pwd">密码必须由字母和数字至少8位组成</string>
+    <string name="use">姓名名和密码不能为空</string>
+    <string name="idc">身份证不能为空或输入错误</string>
+    <string name="mandm">密码和确认密码不匹配</string>
+    <string name="mm">用户名或密码错误</string>
+    <string name="zhaobudao">找不到该用户，请注册</string>
+    <string name="userno">用户已存在</string>
+    <string name="name">姓名</string>
+    <string name="uname">请输入姓名</string>
+    <string name="house_number">门牌号</string>
+    <string name="house_number1">请输入门牌号</string>
+    <string name="id">身份证</string>
+    <string name="id1">请输入身份证</string>
 </resources>
