--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -21,8 +21,9 @@
     <string name="yzm">手机验证码登录</string>
     <string name="yz">验证码</string>
     <string name="yz1">请输入验证码</string>
-    <string name="pwd">密码必须由字母和数字至少8位组成</string>
-    <string name="use">姓名名和密码不能为空</string>
+    <string name="pwd">包含数字、英文字母和特殊符号（至少两种）的8位密码</string>
+    <string name="use">用户名和密码不能为空</string>
+    <string name="us">请输入姓名</string>
     <string name="idc">身份证格式错误</string>
     <string name="mandm">密码和确认密码不匹配</string>
     <string name="mm">用户名或密码错误</string>
@@ -37,4 +38,28 @@
     <string name="gr">个人信息</string>
     <string name="root">管理员</string>
     <string name="rootedit">请输入管理员账户</string>
+    <string name="date">最近一次登陆时间</string>
+    <string name="phon">手机号</string>
+    <string name="hose">门牌号</string>
+    <string name="gender">性别</string>
+    <string name="age">年龄</string>
+    <string name="update">修改个人信息</string>
+    <string name="save">保存</string>
+    <string name="nomodifications">没有修改内容</string>
+    <string name="usercommunity">管理用户信息</string>
+    <string name="delect">删除</string>
+    <string name="search">查找</string>
+    <string name="ex">快递服务</string>
+    <string name="coom">社区交流</string>
+    <string name="upphone">更改手机号</string>
+    <string name="map">地图导航</string>
+    <string name="token">临时验证码：</string>
+    <string name="take">取件</string>
+    <string name="lsyzm">临时验证码</string>
+    <string name="you">请输入信息</string>
+    <string name="liuyan">留言</string>
+    <string name="liuyanlan">留言栏</string>
+    <string name="infophone">需要修改的手机号</string>
+    <string name="updatePhone">修改手机号</string>
+    <string name="updatephone">修改后的手机号</string>
 </resources>
